tests-integration/fixtures/checking/1772567520_derive_functor_higher_kinded/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Wrap ::
  forall (t :: Type) (@f :: (t :: Type) -> Type) (@a :: (t :: Type)).
    (f :: (t :: Type) -> Type) (a :: (t :: Type)) ->
    Wrap @(t :: Type) (f :: (t :: Type) -> Type) (a :: (t :: Type))
WrapNoFunctor ::
  forall (t :: Type) (@f :: (t :: Type) -> Type) (@a :: (t :: Type)).
    (f :: (t :: Type) -> Type) (a :: (t :: Type)) ->
    WrapNoFunctor @(t :: Type) (f :: (t :: Type) -> Type) (a :: (t :: Type))

Types
Wrap :: forall (t :: Type). ((t :: Type) -> Type) -> (t :: Type) -> Type
WrapNoFunctor :: forall (t :: Type). ((t :: Type) -> Type) -> (t :: Type) -> Type

Derived
derive forall (t :: Type -> Type). Functor (t :: Type -> Type) => Functor (Wrap @Type (t :: Type -> Type))
derive forall (t :: Type -> Type). Functor (WrapNoFunctor @Type (t :: Type -> Type))

Roles
Wrap = [Representational, Nominal]
WrapNoFunctor = [Representational, Nominal]

Diagnostics
error[NoInstanceFound]: No instance found for: Functor (t :: Type -> Type)
  --> 9:1..9:42
  |
9 | derive instance Functor (WrapNoFunctor f)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
